# pytest-tuitest

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  dodo.py  justfile  pyproject.toml
.github/workflows/: generate-documentation.yml
src/pytest_tuitest/: __init__.py  colors.py  plugin.py  process.py  styles.py  terminal.py
tests/: conftest.py  test_plugin.py  test_process.py  test_terminal.py
tests/test_plugin/: test_capturing_stderr.py  test_capturing_stdout.py  test_sending_stdin.py  test_specifying_arguments.py  test_specifying_environment.py  test_specifying_executable.py  test_specifying_terminal_size.py
tests/test_scripts/: all_16_colors.sh  all_256_colors.sh  colors.sh  echo_to_stderr.sh  outputs.sh  outputs_one_letter.sh  reversing_echo.sh  spammy.sh  styles.sh
